# judge

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh  clean.sh  readme.txt  upload.bat
code/: CMakeLists.txt
code/aaa/: CMakeLists.txt  aaa.cpp  aaa.h  aaa_cmd.cpp
code/cli/: CMakeLists.txt  cli_bdn.cpp  cli_core.cpp  cli_core.h  cli_def.h  cli_history.cpp  cli_history.h  cli_hook.cpp  cli_hook.h  cli_inc.h  cli_main.cpp  cli_reg.cpp  cli_reg.h  cli_shell.cpp  cli_shell.h  cli_type.h  cli_util.cpp  cli_util.h  cli_view.cpp  cli_view.h  cli_vty.cpp  cli_vty.h  cli_vty_io.cpp  cli_vty_io.h
code/client/: client.cpp
code/event/: CMakeLists.txt  event_pub.cpp
code/event/include/: event_pub.h
code/ftp/: CMakeLists.txt  ftp_client.cpp  ftp_client.h  ftp_common.cpp  ftp_common.h  ftp_main.cpp  ftp_server.cpp  ftp_server.h
code/hook/: hook.cpp  win32_build.BAT
code/ic/: CMakeLists.txt  debug_center.cpp
code/ic/include/: debug_center.h  debug_center_inc.h
code/include/: icli.h  osp_common_def.h  pdt_common_inc.h  root.h
code/judge/: CMakeLists.txt  judge.cpp  judge_cmd.cpp  judge_codeforces.cpp  judge_elo.cpp  judge_guet.cpp  judge_hdu.cpp  judge_io.cpp  judge_leetcode.cpp  judge_linux.cpp  judge_recent.cpp  judge_sql.cpp  judge_test.cpp  judge_util.cpp  judge_var.cpp  judge_win.cpp
code/judge/include/: judge.h  judge_cmd.h  judge_codeforces.h  judge_def.h  judge_guet.h  judge_hdu.h  judge_inc.h  judge_io.h  judge_leetcode.h  judge_sql.h  judge_type.h  judge_util.h  judge_var.h
code/main/: CMakeLists.txt  main.cpp
code/ndp/: CMakeLists.txt  ndp.cpp
code/osp/: osp.mk
code/osp/aaa/: aaa.cpp  aaa.h  aaa.mk  aaa_cmd.cpp
code/osp/command/: command.mk
code/osp/command/include/: command_adp.h  command_core.h  command_def.h  command_func.h  command_inc.h  command_io.h  command_type.h  command_var.h  icli.h
code/osp/command/source/: command_adp.cpp  command_bdn.cpp  command_core.cpp  command_func.cpp  command_io.cpp  command_main.cpp  command_var.cpp
code/osp/common/include/: osp_common_def.h
code/osp/debug/: debug.mk
code/osp/debug/include/: debug_center.h  debug_center_inc.h
code/osp/debug/source/: debug_center.cpp
code/osp/event/: event.mk
code/osp/event/include/: event_pub.h
code/osp/event/source/: event_pub.cpp
code/osp/ftp/: ftp.mk  ftp_common.cpp  ftp_common.h  ftp_main.cpp  ftp_server.cpp  ftp_server.h
code/osp/ndp/: ndp.mk
code/osp/ndp/source/: ndp.cpp
code/osp/regex/: jungle_regex.cpp  regex.cpp_bak  regex.mk
code/osp/telnet/: telnet.mk  telnet_client.cpp  telnet_cmd.cpp  telnet_server.cpp
code/osp/util/: kernel.h  linux.cpp  util.cpp  util.h  util.mk  win32.cpp
code/product/: product.mk
code/product/client/: client.cpp  win32_build.BAT
code/product/hook/: hook.cpp  win32_build.BAT
code/product/include/: pdt_common_inc.h
code/product/judge/: judge.mk
code/product/judge/include/: define.h  judge_cmd.h  judge_def.h  judge_guet.h  judge_hdu.h  judge_inc.h  judge_io.h  judge_sql.h  judge_type.h  judge_util.h  judge_var.h
code/product/judge/source/: judge.cpp  judge_cmd.cpp  judge_guet.cpp  judge_hdu.cpp  judge_io.cpp  judge_recent.cpp  judge_sql.cpp  (+2 more)
code/product/main/: main.cpp  main.mk  pdt.mk  pdt_init.cpp  root.h  sysmng.cpp  sysmng.h
code/product/test/: test.cpp
code/product/thirdpart32/: thirdpart32.mk
code/sysmng/: CMakeLists.txt  config.cpp  config.h  sysmng.cpp  sysmng.h
code/telnet/: CMakeLists.txt  telnet.h  telnet_client.cpp  telnet_cmd.cpp  telnet_server.cpp
code/test/: CMakeLists.txt  test.cpp  test_judge.cpp  test_ssl.cpp_
code/thirdpart32/: CMakeLists.txt
code/thirdpart32/cjson/: CMakeLists.txt
code/thirdpart32/crypt/: aes256.cpp  aes256.h  crypt.h  md5.cpp  sha256.h
code/thirdpart32/pcre/: CMakeLists.txt
code/thirdpart32/stack_walker/: stackwalker.h
code/util/: CMakeLists.txt  kernel.h  linux.cpp  util.cpp  util.h  win32.cpp
code/vrp/: vrp.mk
code/vrp/command/: command.mk
code/vrp/debug/: debug.mk
code/vrp/regex/: jungle_regex.cpp  regex.cpp  regex.mk
(+58 files in other folders)
