
#add_subdirectory(main)  
add_subdirectory(aaa)  
add_subdirectory(cli)
add_subdirectory(event)
add_subdirectory(ic)  
add_subdirectory(ftp)
add_subdirectory(telnet)
add_subdirectory(util)
add_subdirectory(judge)  
add_subdirectory(sysmng)
add_subdirectory(ndp)
add_subdirectory(third_party)
add_subdirectory(test)

